# stock-predict

./: .clang-format  BUILD_PLAN.md  BUILD_PLAN_REVISED.md  CMakeLists.txt  LICENSE  README.md  SECURITY.md  conanfile.py  conanfile.txt
.github/workflows/: ci.yml  ci_old.yml
benchmarks/: CMakeLists.txt  benchmark_main.cpp
cmake/: StockPredictConfig.cmake.in
configs/: default.yaml
docs/: CMakeLists.txt  Doxyfile.in
include/stock_predict/: data.hpp  features.hpp  models.hpp  risk.hpp  stock_predictor.hpp
include/stock_predict/gui/: main_window.h  main_window.hpp
scripts/: compare_benchmarks.py  setup.sh  test_gui.sh
src/: main.cpp
src/core/: models.cpp  stock_predictor.cpp
src/data/: data_sources.cpp
src/features/: technical_indicators.cpp
src/gui/: gui_main.cpp  main.cpp  main_window.cpp  resources.qrc  widgets.cpp
src/gui/styles/: dark.qss  light.qss
src/risk/: risk_manager.cpp
tests/: CMakeLists.txt  test_minimal.cpp  test_risk.cpp  test_stock_predictor.cpp
tests/phase1/: run_phase1_tests.sh  test_build_system.cpp  test_ci_pipeline.cpp
tests/phase2/: run_phase2_tests.sh  test_predictors.cpp
tests/phase3/: run_phase3_tests.sh  test_feature_engineering.cpp
tests/phase4/: run_phase4_tests.sh  test_risk_management.cpp
